samples/_failures_safe/1761319355_3bc686_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3003f1ad.c: In function ‘main’:
./samples/SAFE/__tmp_3003f1ad.c:152:13: error: expected expression at end of input
  152 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_3003f1ad.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3003f1ad.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3003f1ad.c:152:13: error: expected declaration or statement at end of input
